:iphone: Fix projects page on mobile

--- a/assets/scss/_projects.scss
+++ b/assets/scss/_projects.scss
@@ -67,6 +67,7 @@
     }
 
     .cover {
+      display: block;
       width: 300px;
       height: 190px;
       position: relative;
@@ -154,6 +155,20 @@
           margin: auto;
           text-align: center;
         }
+      }
+    }
+  }
+
+  @media only screen and (max-width: 600px) {
+    .project {
+      margin: 1rem;
+    }
+  }
+
+  @media only screen and (max-width: 400px) {
+    .project {
+      .cover {
+        display: none;
       }
     }
   }
